fix(stylesheet): add `z-index` to `panel.module.scss`;

--- a/styles/panel.module.scss
+++ b/styles/panel.module.scss
@@ -3,5 +3,5 @@
   background-image: var(--panel-image-source);
   background-repeat: round;
   background-size: revert;
-  z-index: 9;
+  z-index: 7;
 }
